# infiniti

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_otp.py
accounts/utils/: email_utils.py  otp_utils.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/tests/: test_models.py  test_serializers.py  test_views.py
infiniti/: asgi.py  urls.py  wsgi.py
infiniti/settings/: __init__.py  apps.py  base.py  database.py  rest_framework.py  static.py
