[tool.poetry]
name = "infinit"
version = "0.1.0"
description = ""
authors = ["sajad j <sjorjs.job@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15.2"
python-decouple = "^3.8"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework-simplejwt = "^5.3.1"
black = "^24.8.0"
drf-yasg = "^1.21.7"
pytest = "^8.3.3"
pytest-django = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
